2005-09-26  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/Makefile.am:
	* embed/mozilla/GtkNSSSecurityWarningDialogs.cpp: (DoDialog):

	Back out previous change, it doesn't work right when there
	are *two* dialogues shown: the 1st one can only be dismissed
	after the 2nd one has been dismissed.

2005-09-26  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/Makefile.am:
	* embed/mozilla/AutoEventQueue.cpp:
	* embed/mozilla/AutoEventQueue.h:
	* embed/mozilla/GtkNSSSecurityWarningDialogs.cpp: (DoDialog):
	
	Push a new event queue while showing the dialogue
	with gtk_dialog_run. This fixes the problem (caused by the
	braindead API of showing this dialogue synchronously) that
	networking is blocked in all other windows while the dialogue
	is shown.
	
2005-09-25  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* data/epiphany-lockdown.schemas.in:

	Add disable_quit to lockdown gconf schema. Fix bug 316499.

2005-09-24  Crispin Flowerday  <gnome@flowerday.cx>

	* data/epiphany.m4:

	Rename the autoconf macro to EPIPHANY_EXTENSION_INIT() and make it
	check the ephy version, get the extension directory and find out
	whether python is enabled.

2005-09-24  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/EphyAboutModule.cpp: (GetErrorMessage):

	Handle contentEncodingError error.

2005-09-24  Crispin Flowerday  <gnome@flowerday.cx>

	* lib/Makefile.am:
	* lib/ephy-module.c: (ephy_module_load):

	If the library path isn't absolute, look in the main extension
	dir, and then the users own extension directory

2005-09-23  Crispin Flowerday  <gnome@flowerday.cx>

	* src/ephy-extensions-manager.c:
	(ephy_extensions_manager_load_ini_string):

	Don't crash if the Authors key is missing, or
	there are no keys in the Loader section

2005-09-23  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-extensions-manager.c:

	s/DOT_INIT/DOT_INI/g.

2005-09-23  Christian Persch  <chpe@cvs.gnome.org>

	* src/epphy-extensions-manager.c: (free_extension_info),