@@ -112,7 +112,6 @@
 	<menuitem name="EditCopyDP" action="EditCopy"/>
 	<separator name="DPSep2"/>
 	<menuitem name="SavePageAsDP" action="FileSaveAs"/>
-	<menuitem name="SaveBackgroundAsDP" action="SaveBackgroundAs"/>
 	<menuitem name="BookmarkPageDP" action="ContextBookmarkPage"/>
 </popup>
 
@@ -124,7 +123,6 @@
 	<menuitem name="EditCopyFSDP" action="EditCopy"/>
 	<separator />
 	<menuitem name="SavePageAsFSDP" action="FileSaveAs"/>
-	<menuitem name="SaveBackgroundAsFSDP" action="SaveBackgroundAs"/>
 	<menuitem name="BookmarkPageFSDP" action="ContextBookmarkPage"/>
 	<separator />
 	<menuitem name="ViewToolbarFSDP" action="ViewToolbar"/>
@@ -138,7 +136,6 @@
 	<menuitem name="EditCopyFDP" action="EditCopy"/>
 	<separator />
 	<menuitem name="SavePageAsFDP" action="FileSaveAs"/>
-	<menuitem name="SaveBackgroundAsFDP" action="SaveBackgroundAs"/>
 	<menuitem name="BookmarkPageFDP" action="ContextBookmarkPage"/>
 	<separator />
 	<menuitem name="OpenFrameFDP" action="OpenFrame"/>
@@ -152,7 +149,6 @@
 	<menuitem name="EditCopyFSFDP" action="EditCopy"/>
 	<separator />
 	<menuitem name="SavePageAsFSFDP" action="FileSaveAs"/>
-	<menuitem name="SaveBackgroundAsFSFDP" action="SaveBackgroundAs"/>
 	<menuitem name="BookmarkPageFSFDP" action="ContextBookmarkPage"/>
 	<separator />
 	<menuitem name="OpenFrameFSFDP" action="OpenFrame"/>
