@@ -198,8 +198,6 @@ update_window (EphyWindow *window,
 	ephy_action_change_sensitivity_flags (action, LOCKDOWN_FLAG, disabled);
 	action = gtk_action_group_get_action (popups_action_group, "DownloadLinkAs");
 	ephy_action_change_sensitivity_flags (action, LOCKDOWN_FLAG, disabled);
-	action = gtk_action_group_get_action (popups_action_group, "SaveBackgroundAs");
-	ephy_action_change_sensitivity_flags (action, LOCKDOWN_FLAG, disabled);
 	action = gtk_action_group_get_action (popups_action_group, "SaveImageAs");
 	ephy_action_change_sensitivity_flags (action, LOCKDOWN_FLAG, disabled);
 	writable = eel_gconf_key_is_writable (CONF_DESKTOP_BG_PICTURE);
