@@ -1,3 +1,15 @@
+2005-09-26  Jean-François Rameau  <jframeau@cvs.gnome.org>
+
+	* src/ephy-lockdown.c: (update_window):
+	* src/ephy-window.c: (update_popups_tooltips), (show_embed_popup):
+	* src/popup-commands.c:
+	* src/popup-commands.h:
+	* embed/mozilla/EventContext.cpp: (GetEventContext):
+	* data/ui/epiphany-ui.xml:
+
+	Unify background image and image code (contex menu, conext event). 
+	Fix bug 154887.
+
 2005-09-26  Christian Persch  <chpe@cvs.gnome.org>
 
 	* embed/mozilla/Makefile.am:
